[gd_scene load_steps=32 format=3 uid="uid://dkhivw4t7m4nq"]

[ext_resource type="Script" path="res://fase3/fase_distribuição.gd" id="1_ifj15"]
[ext_resource type="Texture2D" uid="uid://mb5q7xoycspc" path="res://fase3/sprites/estradinha.png" id="2_aj623"]
[ext_resource type="Texture2D" uid="uid://dwhcqmonderbs" path="res://fase3/sprites/mapa_fase_03.png" id="2_p431c"]
[ext_resource type="Texture2D" uid="uid://uvogsmom836a" path="res://fase2/sprites/barra_equilibrio_fundo.png" id="3_f03xl"]
[ext_resource type="Texture2D" uid="uid://cwt4q0mlttisw" path="res://fase3/sprites/fase 3 producao.png" id="3_nydfc"]
[ext_resource type="Texture2D" uid="uid://8g1abtcpbkgl" path="res://fase2/sprites/barra_equilibrio.png" id="4_ntuvi"]
[ext_resource type="Texture2D" uid="uid://ve5cdarimi6j" path="res://fase3/sprites/barra_equilibrio_progresso.png" id="4_oml5w"]
[ext_resource type="FontFile" uid="uid://73t4jgtprw8c" path="res://fase3/sprites/DwarfFortressVan.ttf" id="5_1flw8"]
[ext_resource type="Texture2D" uid="uid://dramei45v28v1" path="res://fase2/sprites/barra_equilibrio_progresso.png" id="5_g0g16"]
[ext_resource type="Texture2D" uid="uid://paah7so7e7au" path="res://fase3/sprites/barra_equilibrio 2.png" id="5_xq8r6"]
[ext_resource type="Texture2D" uid="uid://bqo86yvjidm7o" path="res://fase2/sprites/botão_aceitar_vacina (1).png" id="10_molyk"]
[ext_resource type="Texture2D" uid="uid://brrk05kx75biv" path="res://fase2/sprites/Fritz_gigante.png" id="12_6tky5"]
[ext_resource type="Texture2D" uid="uid://btigcdc1v33gy" path="res://fase3/sprites/cidade.png" id="12_7ekup"]
[ext_resource type="Texture2D" uid="uid://xfbik0f435hb" path="res://fase2/sprites/Fritz_bocaaberta.png" id="13_w3b7n"]
[ext_resource type="Texture2D" uid="uid://de5yrhv47ppe0" path="res://fase2/sprites/textbox comeco.png" id="14_8d8ys"]
[ext_resource type="Texture2D" uid="uid://b4nh5ag7rct3c" path="res://fase2/sprites/textbox meio.png" id="15_3duhw"]
[ext_resource type="Texture2D" uid="uid://y6q0adiq44gb" path="res://fase2/sprites/textbox final.png" id="16_as17a"]
[ext_resource type="Texture2D" uid="uid://koh4nejyt2yd" path="res://fase2/sprites/botao_fala.png" id="17_84j5t"]
[ext_resource type="Texture2D" uid="uid://dl5773jp2ie37" path="res://fase 1/botao retornar menu.png" id="19_vkjbj"]
[ext_resource type="AudioStream" uid="uid://ddisbotrk1h1i" path="res://sfx/fase 3.wav" id="20_nj7k8"]
[ext_resource type="AudioStream" uid="uid://du1sfucqkgewn" path="res://sfx/intro fase 3.wav" id="21_j2nyu"]
[ext_resource type="AudioStream" uid="uid://cgu61harsijk0" path="res://sfx/dica fase 3.wav" id="22_n2cnt"]

[sub_resource type="Theme" id="Theme_pmpni"]
Label/font_sizes/font_size = 48
Label/fonts/font = ExtResource("5_1flw8")

[sub_resource type="Animation" id="Animation_fjk8j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FritzIntro:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Node/TextoIntro:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Node/TextoIntro:visible_ratio")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("FritzIntro:animation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"falando"]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Node/TextoButton:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Node/TextoVitória:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Node/TextoVitória:visible_ratio")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Node/WinButton:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("AudioStreamPlayer3:playing")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_x2ll5"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FritzIntro:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_acnuu"]
resource_name = "intro"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FritzIntro:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Node/TextoIntro:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Node/TextoIntro:visible_ratio")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 5.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("FritzIntro:animation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 5.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"falando", &"calado"]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Node/TextoButton:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Node/TextoVitória:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Node/WinButton:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ymnxi"]
resource_name = "win"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FritzIntro:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FritzIntro:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"falando", &"calado"]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Node/TextoButton:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Node/TextoVitória:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Node/TextoVitória:visible_ratio")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Node/TextoIntro:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Node/WinButton:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 2.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("AudioStreamPlayer3:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jc6vu"]
_data = {
"RESET": SubResource("Animation_fjk8j"),
"idle": SubResource("Animation_x2ll5"),
"intro": SubResource("Animation_acnuu"),
"win": SubResource("Animation_ymnxi")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_s7ugj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_6tky5")
}],
"loop": true,
"name": &"calado",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_6tky5")
}, {
"duration": 1.0,
"texture": ExtResource("13_w3b7n")
}],
"loop": true,
"name": &"falando",
"speed": 5.0
}]

[sub_resource type="Theme" id="Theme_cpcsq"]
RichTextLabel/font_sizes/normal_font_size = 56

[sub_resource type="Theme" id="Theme_raof1"]
RichTextLabel/font_sizes/normal_font_size = 70

[node name="Distribuição" type="Node2D"]
script = ExtResource("1_ifj15")

[node name="Fundo" type="Sprite2D" parent="."]
position = Vector2(576, 325.463)
scale = Vector2(1.17073, 1.17073)
texture = ExtResource("2_p431c")

[node name="ColorRect2" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.509804)

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="TimerBar" type="TextureProgressBar" parent="."]
offset_left = 384.0
offset_top = 344.0
offset_right = 512.0
offset_bottom = 370.0
scale = Vector2(3, 3)
max_value = 200.0
step = 0.1
value = 200.0
texture_under = ExtResource("3_f03xl")
texture_over = ExtResource("4_ntuvi")
texture_progress = ExtResource("4_oml5w")

[node name="TimerTexto" type="Label" parent="."]
offset_left = 390.0
offset_top = 350.0
offset_right = 762.0
offset_bottom = 419.0
theme = SubResource("Theme_pmpni")
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Estradinha" type="Sprite2D" parent="."]
position = Vector2(576, 294.5)
scale = Vector2(0.8, 0.984375)
texture = ExtResource("2_aj623")

[node name="Vans" type="Node2D" parent="."]

[node name="VanSpawner" type="Marker2D" parent="."]
position = Vector2(109, 288)
scale = Vector2(0.75, 0.75)

[node name="VanButton" type="TextureButton" parent="."]
offset_left = 192.0
offset_top = 440.0
offset_right = 224.0
offset_bottom = 476.0
scale = Vector2(4, 4)
texture_normal = ExtResource("10_molyk")

[node name="ProduçãoBar" type="TextureProgressBar" parent="."]
offset_left = 64.0
offset_top = 632.0
offset_right = 504.0
offset_bottom = 721.0
rotation = -1.5708
step = 0.5
value = 60.0
nine_patch_stretch = true
texture_under = ExtResource("3_f03xl")
texture_over = ExtResource("5_xq8r6")
texture_progress = ExtResource("5_g0g16")

[node name="ProducaoTimer" type="Timer" parent="ProduçãoBar"]
wait_time = 0.375

[node name="Producao" type="Sprite2D" parent="."]
position = Vector2(184, 128)
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_nydfc")

[node name="DemandaBar" type="TextureProgressBar" parent="."]
offset_left = 999.0
offset_top = 632.0
offset_right = 1439.0
offset_bottom = 721.0
rotation = -1.5708
step = 0.1
value = 80.0
nine_patch_stretch = true
texture_under = ExtResource("3_f03xl")
texture_over = ExtResource("5_xq8r6")
texture_progress = ExtResource("5_g0g16")

[node name="DemandaTimer" type="Timer" parent="DemandaBar"]
wait_time = 0.375

[node name="Cidade" type="Sprite2D" parent="."]
position = Vector2(988.833, 99)
scale = Vector2(0.65873, 0.65873)
texture = ExtResource("12_7ekup")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "intro"
libraries = {
"": SubResource("AnimationLibrary_jc6vu")
}

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.572549)

[node name="FritzIntro" type="AnimatedSprite2D" parent="."]
position = Vector2(112, 560)
sprite_frames = SubResource("SpriteFrames_s7ugj")
animation = &"falando"
autoplay = "falando"

[node name="Node" type="Node2D" parent="."]
position = Vector2(344, 400)
scale = Vector2(0.525, 0.525)

[node name="TextboxComeco" type="Sprite2D" parent="Node"]
position = Vector2(240, 192)
texture = ExtResource("14_8d8ys")

[node name="TextboxMeio" type="Sprite2D" parent="Node"]
position = Vector2(752, 192)
texture = ExtResource("15_3duhw")

[node name="TextboxFinal" type="Sprite2D" parent="Node"]
position = Vector2(1264, 192)
texture = ExtResource("16_as17a")

[node name="TextoIntro" type="RichTextLabel" parent="Node"]
offset_left = 61.0
offset_right = 1423.0
offset_bottom = 390.0
theme = SubResource("Theme_cpcsq")
text = "Agora que já conscientizamos a população e temos as vacinas, precisamos distribuí-las efetivamente. Para isso, temos que equilibrar a nossa produção de vacinas com a demanda das cidades controlando as levas de distribuição."
visible_characters = 0
visible_ratio = 0.0

[node name="TextoVitória" type="RichTextLabel" parent="Node"]
offset_left = 61.0
offset_right = 1423.0
offset_bottom = 390.0
theme = SubResource("Theme_raof1")
text = "Muito bem! Graças a você, conseguimos trazer vacinas a todos os cidadãos do litoral norte de Santa Catarina!"
visible_characters = 0
visible_ratio = 0.0

[node name="TextoButton" type="TextureButton" parent="Node"]
visible = false
offset_left = 1304.76
offset_top = 222.857
offset_right = 1368.76
offset_bottom = 286.857
scale = Vector2(3, 3)
texture_normal = ExtResource("17_84j5t")

[node name="WinButton" type="TextureButton" parent="Node"]
visible = false
offset_left = 1247.62
offset_top = 217.143
offset_right = 1311.62
offset_bottom = 281.143
scale = Vector2(3, 3)
texture_normal = ExtResource("17_84j5t")

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 16.0
offset_top = -24.0
offset_right = 144.0
offset_bottom = 107.0
texture_normal = ExtResource("19_vkjbj")
stretch_mode = 0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_nj7k8")
volume_db = -20.0
autoplay = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_j2nyu")
volume_db = -3.298
autoplay = true

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_n2cnt")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="VanButton" to="." method="_on_van_button_pressed"]
[connection signal="timeout" from="ProduçãoBar/ProducaoTimer" to="." method="_on_producao_timer_timeout"]
[connection signal="timeout" from="DemandaBar/DemandaTimer" to="." method="_on_demanda_timer_timeout"]
[connection signal="pressed" from="Node/TextoButton" to="." method="_on_texto_button_pressed"]
[connection signal="pressed" from="Node/WinButton" to="." method="_on_win_button_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_menuBOTAO_pressed"]
